--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.11",
-    "@angular/common": "~13.3.11",
-    "@angular/compiler": "~13.3.11",
-    "@angular/core": "^13.3.11",
-    "@angular/forms": "~13.3.11",
-    "@angular/platform-browser": "~13.3.11",
-    "@angular/platform-browser-dynamic": "~13.3.11",
-    "@angular/router": "~13.3.11",
+    "@angular/animations": "^14.1.1",
+    "@angular/common": "^14.1.1",
+    "@angular/compiler": "^14.1.1",
+    "@angular/core": "^14.1.1",
+    "@angular/forms": "^14.1.1",
+    "@angular/platform-browser": "^14.1.1",
+    "@angular/platform-browser-dynamic": "^14.1.1",
+    "@angular/router": "^14.1.1",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^9.2.0",
-    "@ngrx/store-devtools": "^9.2.0",
+    "@ngrx/store": "^14.0.2",
+    "@ngrx/store-devtools": "^14.0.2",
     "ngrx": "0.0.1-security",
-    "rxjs": "^6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "^5.0.0-beta.12",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "^13.3.9",
-    "@angular/compiler-cli": "~13.3.11",
-    "@angular/language-service": "~13.3.11",
+    "@angular/cli": "^14.1.1",
+    "@angular/compiler-cli": "^14.1.1",
+    "@angular/language-service": "^14.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.44",
-    "codelyzer": "^6.0.0",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
@@ -45,7 +45,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^3.15.1",
     "typescript": "~4.6.4"
   }
 }
