--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
     "@angular/platform-browser": "^14.1.1",
     "@angular/platform-browser-dynamic": "^14.1.1",
     "@angular/router": "^14.1.1",
-    "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^14.0.2",
     "@ngrx/store-devtools": "^14.0.2",
-    "ngrx": "0.0.1-security",
-    "rxjs": "^5.0.0-beta.12",
+    "rxjs": "~6.6.3",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.7"
   },
