--- a/package.json
+++ b/package.json
@@ -11,30 +11,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.1.1",
-    "@angular/common": "^14.1.1",
-    "@angular/compiler": "^14.1.1",
-    "@angular/core": "^14.1.1",
-    "@angular/forms": "^14.1.1",
-    "@angular/platform-browser": "^14.1.1",
-    "@angular/platform-browser-dynamic": "^14.1.1",
-    "@angular/router": "^14.1.1",
-    "@ngrx/store": "^14.0.2",
-    "@ngrx/store-devtools": "^14.0.2",
+    "@angular/animations": "^15.2.9",
+    "@angular/common": "^15.2.9",
+    "@angular/compiler": "^15.2.9",
+    "@angular/core": "^15.2.9",
+    "@angular/forms": "^15.2.9",
+    "@angular/platform-browser": "^15.2.9",
+    "@angular/platform-browser-dynamic": "^15.2.9",
+    "@angular/router": "^15.2.9",
+    "@ngrx/store": "^15.4.0",
+    "@ngrx/store-devtools": "^15.4.0",
     "rxjs": "~6.6.3",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.7"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.1.1",
-    "@angular/cli": "^14.1.1",
-    "@angular/compiler-cli": "^14.1.1",
-    "@angular/language-service": "^14.1.1",
+    "@angular-devkit/build-angular": "^15.2.8",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
+    "@angular/cli": "^15.2.8",
+    "@angular/compiler-cli": "^15.2.9",
+    "@angular/language-service": "^15.2.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.44",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
     "codelyzer": "^6.0.2",
-    "jasmine-core": "~3.6.0",
+    "eslint": "^8.33.0",
+    "jasmine-core": "~5.0.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -43,7 +51,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "~4.6.4"
+    "typescript": "~4.9.5"
   }
 }
